/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java'
    id 'scala'
    id 'io.gatling.gradle' version '3.6.1'
    id 'idea'
    id "com.google.protobuf" version "0.8.17"
//    id 'application'
}

project.sourceSets {
    gatling {
        scala.srcDirs = ['src/gatling/scala']
//        resources.srcDirs = ['src/gatling/resources/data', 'src/gatling/resources/bodies', 'src/gatling/resources/conf']
    }
}

gatling {
    // toolVersion = '3.4.2' //Gatling version

    // WARNING: options below only work when logback config file isn't provided
    logLevel = 'WARN' // logback root level
    logHttp = 'NONE' // set to 'ALL' for all HTTP traffic in TRACE, 'FAILURES' for failed HTTP traffic in DEBUG
    jvmArgs = [
            '-server',
            '-Xmx1G',
            '-XX:+HeapDumpOnOutOfMemoryError',
            '-XX:+UseG1GC',
            '-XX:+ParallelRefProcEnabled',
            '-XX:MaxInlineLevel=20',
            '-XX:MaxTrivialSize=12',
            '-XX:-UseBiasedLocking',
            "-Dgatling.charting.indicators.lowerBound=10",
            "-Dgatling.charting.indicators.higherBound=20"
    ]
    simulations = {
        include "**/simulations/*Simu.scala"
        include "**/simulations/*Simulation.scala"
        include "**/simulations/*.scala"
    }
    systemProperties = ['file.encoding': 'UTF-8']
}

repositories {
//    mavenLocal()
    maven {
        url 'https://central'
    }
    maven {
        url 'https://repo.maven.apache.org/maven2'
        name 'Maven Central'
    }
}

dependencies {
//    compile 'org.scala-lang:scala-library:2.12.12'
    testImplementation 'io.gatling.highcharts:gatling-charts-highcharts:3.6.1'
    gatling 'com.google.code.gson:gson:2.8.8' // <1>
    gatlingImplementation 'org.apache.commons:commons-lang3:3.12.0' // <2>
    gatlingRuntimeOnly 'cglib:cglib-nodep:3.3.0' // <3>
    gatlingImplementation 'com.rabbitmq:amqp-client:5.13.0'
    gatlingImplementation 'org.fusesource.mqtt-client:mqtt-client:1.16'
    gatlingImplementation('org.apache.kafka:kafka-clients:2.8.0') {
        exclude group: "org.slf4j", module: "slf4j-api"
    }
//    gatlingImplementation files('gatling-lib-loadmodel-0.0.1-SNAPSHOT.jar')
//    gatlingImplementation files('gatling-lib-toolbox-0.0.1-SNAPSHOT.jar')
//    gatlingImplementation files('gatling-lib-amqp-0.0.1-SNAPSHOT.jar')
    gatlingImplementation files('libs/gatling-lib-kafka-0.0.1-SNAPSHOT.jar')
    gatlingImplementation files('libs/gatling-lib-amqp-0.0.2-SNAPSHOT.jar')
    gatlingImplementation files('libs/gatling-lib-toolbox-0.0.2-SNAPSHOT.jar')
    gatlingImplementation files('libs/gatling-lib-loadmodel-0.0.2-SNAPSHOT.jar')
    gatlingImplementation files('libs/gatling-lib-mqtt-0.0.2-SNAPSHOT.jar')
    gatlingImplementation files('libs/gatling-lib-dubbo-0.0.2-SNAPSHOT.jar')
    gatlingImplementation files('libs/dubbo-samples-api-1.0-SNAPSHOT.jar')
//    gatlingImplementation files('libs/user-details-proto-1.0-SNAPSHOT.jar')
    implementation 'com.google.protobuf:protobuf-java:3.17.3'
    implementation 'io.grpc:grpc-netty-shaded:1.39.0'
    implementation 'io.grpc:grpc-protobuf:1.39.0'
    implementation 'io.grpc:grpc-stub:1.39.0'
    implementation 'javax.annotation:javax.annotation-api:1.3.2'
    gatling 'com.github.phisgr:gatling-javapb:1.1.1'
    gatling 'com.github.phisgr:gatling-grpc:0.11.1'
    gatlingImplementation 'org.apache.dubbo:dubbo:3.0.2.1'
}

protobuf {
    protoc {
        artifact = 'com.google.protobuf:protoc:3.14.0'
    }
    plugins {
        grpc {
            artifact = 'io.grpc:protoc-gen-grpc-java:1.34.1'
        }
    }
    generateProtoTasks {
        all()*.plugins {
            grpc {}
        }
    }
}

//application {
//    mainClassName = 'cn.qe.gatling.example.DemoServer'
//}

//group = 'com.gatling.sample'
//version = '3.4.2'
sourceCompatibility = '1.8'
//ext['netty.version'] = '4.0.51.Final'


tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}
